<resources>
    <string name="app_name">Click Tuban</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_activity_register">Daftar Akun</string>
    <string name="title_activity_distribusi">Distribusi</string>
    <string name="title_activity_input_matbal">Input Data Matbal</string>
    <string name="title_activity_konsumen">Konsumen</string>
    <string name="title_activity_matbal">Matbal</string>
    <string name="title_activity_opers">Opers</string>
    <string name="title_activity_ritase">Ritase</string>
    <string name="title_activity_wilayah">Wilayah</string>
    <string name="email">email</string>
    <string name="ulangi_password">ulangi password</string>
    <string name="title_activity_input_konsumen">Input Data Konsumen</string>
    <string name="title_activity_input_wilayah">Input Data Wilayah</string>
    <string name="title_activity_input_opers">Input Data Opers</string>
    <string name="title_activity_input_ritase">Input Data Ritase</string>
    <string-array name="bahan_bakar">
        <item>Pertamax, BULK</item>
        <item>Pertalite</item>
        <item>Premium</item>
        <item>SOLAR/HSD/MGO/ADO</item>
        <item>Biosolar</item>
        <item>Biofame</item>
    </string-array>
    <string-array name="sarfas_tab">
        <item>Penerimaan</item>
        <item>Penyaluran</item>
        <item>Penimbunan</item>
        <item>Supporting</item>
    </string-array>
    <string-array name="pilihan_product">
        <item>Pertamax, BULK</item>
        <item>Pertalite</item>
        <item>Premium</item>
        <item>SOLAR/HSD/MGO/ADO</item>
    </string-array>
    <string-array name="operasi_product">
        <item>Pertamax, BULK</item>
        <item>Premium</item>
        <item>SOLAR/HSD/MGO/ADO</item>
    </string-array>
    <string-array name="pilihan_periode">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>
    <string-array name="pilihan_periode_bulan_tahun">
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>
    <string-array name="pilihan_periode_tanggal_bulan">
        <item>Daily</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="jenis_konsumen">
        <item>SPBU</item>
        <item>SPDN</item>
        <item>TNI/Polri</item>
        <item>PLN</item>
        <item>Own User MT</item>
    </string-array>
    <string-array name="jenis_claim_trip">
        <item>Transport antar kota</item>
        <item>Transport Bandara/stasiun/pelabuhan/Terminal</item>
        <item>Akomodasi dan Laundry</item>
        <item>Uang Makan Harian</item>
        <item>Transport Lokal </item>
        <item>Uang Harian</item>
        <item>Tiket Pesawat</item>
    </string-array>
    <string name="title_activity_info_umum">Informasi Umum</string>
    <string name="title_activity_post_info">Post Informasi</string>
    <string name="title_activity_marine">Marine</string>
    <string name="title_activity_input_initial_tanker">Initial Tanker</string>
    <string name="title_activity_input_tanker_movement">Tanker Movement</string>
    <string name="title_activity_input_ship_condition">Ship\'s Condition</string>
    <string name="title_activity_input_waiting_time">Waiting Time/Excess Time</string>
    <string name="title_activity_input_temporary_stop">Temporary Stop Activity</string>
    <string name="title_activity_input_port_charges">Port Charges</string>
    <string name="title_activity_input_ship_particular">Ship\'s Particular</string>
    <string name="title_activity_initial_tanker">Initial Tanker</string>
    <string name="title_activity_port_charges">Port Charges</string>
    <string name="title_activity_ship_condition">Ship\'s Condition</string>
    <string name="title_activity_ship_particular">Ship\'s Particular</string>
    <string name="title_activity_tanker_movement">Tanker Movement</string>
    <string name="title_activity_temporary_stop">Temporary Stop</string>
    <string name="title_activity_waiting_time">Waiting Time/Excess Time</string>
    <string name="hint_light_dues">Light Dues (Rambu/Navigasi)</string>
    <string name="hint_harbor_dues">Harbor Dues (Labuh)</string>
    <string name="hint_quay_dues">Quay Dues (Tambat)</string>
    <string name="hint_pilotages">Pilotages (Pandu)</string>
    <string name="hint_towage">Towage (Tunda)</string>
    <string name="hint_pup9a2">PUP - 9A2</string>
    <string name="button_text_kirim">kirim</string>
    <string name="hint_reason_stop_1">Reason Stop 1</string>
    <string name="text_stop_time">Stop time</string>
    <string name="button_text_date">date</string>
    <string name="button_text_time">time</string>
    <string name="text_resume_time">Resume time</string>
    <string name="hint_reason_stop">Reason Stop</string>
    <string name="text_resume_time1">Resume time 1</string>
    <string name="hint_reason_stop1">Reason Stop 1</string>
    <string name="text_stop_time1">Stop time 1</string>
    <string name="text_resume_time2">Resume time 2</string>
    <string name="hint_reason_stop2">Reason Stop 2</string>
    <string name="text_stop_time2">Stop time 2</string>
    <string name="text_resume_time3">Resume time 3</string>
    <string name="hint_reason_stop3">Reason Stop 3</string>
    <string name="text_stop_time3">Stop time 3</string>
    <string name="text_resume_time4">Resume time 4</string>
    <string name="hint_reason_stop4">Reason Stop 4</string>
    <string name="text_stop_time4">Stop time 4</string>
    <string name="text_resume_time5">Resume time 5</string>
    <string name="hint_reason_stop5">Reason Stop 5</string>
    <string name="text_stop_time5">Stop time 5</string>
    <string name="button_text_input_time">Input Time</string>
    <string name="hint_description_draft">Description Draft</string>
    <string name="hint_ata">Draft Actual Time Arrival</string>
    <string name="hint_atd">Draft Actual Time Departure</string>
    <string name="hint_grades_bunker">Grades Bunker</string>
    <string name="hint_remaining_on_board_last_port">Remaining On Board (Last Port)</string>
    <string name="hint_remaining_on_board_ata">Remaining On Board (Actual Time Arrival)</string>
    <string name="hint_remaining_on_board_atd">Remaining On Board (Actual Time Departure)</string>
    <string name="hint_repl">REPL</string>
    <string name="hint_com_repl">COM. REPL</string>
    <string name="hint_comp_repl">COMP. REPL</string>
    <string name="hint_location_of_repl">Location of REPL</string>
    <string name="hint_bunker_consumption_port_mt">Bunker Consumption @Port (MT)</string>
    <string name="hint_bunker_consumption_seatime_mt">Bunker Consumption @Seatime (MT)</string>
    <string name="hint_slop_tank_ata">Slop Tank (Actual Time Arrival)</string>
    <string name="hint_slop_tank_atd">Slop Tank (Actual Time Departure)</string>
    <string name="radio_own_tanker">Own Tanker</string>
    <string name="radio_charter_tanker">Charter Tanker</string>
    <string name="text_pertamax">Pertamax</string>
    <string name="text_premium">Premium</string>
    <string name="text_pertalite">Pertalite</string>
    <string name="hint_next_port">Next Port</string>
    <string name="hint_last_port">Last Port</string>
    <string name="hint_port_of_call_report">Port Of Call Report</string>
    <string name="hint_port_of_call">Port Of Call</string>
    <string name="radio_jetty_tppi_3">Jetty TPPI - 3</string>
    <string name="radio_jetty_tppi_2">Jetty TPPI - 2</string>
    <string name="radio_spm_150">SPM-150</string>
    <string name="radio_spm_35">SPM-35</string>
    <string name="text_barthing_at_spm">Barthing at SPM</string>
    <string name="radio_simultan">Simultan</string>
    <string name="radio_grade_by_grade">Grade by Grade</string>
    <string name="text_pumping_method">Pumping Method</string>
    <string name="radio_loading">Loading</string>
    <string name="radio_discharge">Discharge</string>
    <string name="text_tanker_activity">Tanker Activity</string>
    <string name="hint_cargo_status">Cargo Status</string>
    <string name="hint_general_agent">General Agent</string>
    <string name="hint_handling_agent">Handling Agent</string>
    <string name="text_grades">Grades</string>
    <string name="text_status_operasional_report">Status Operasional Report</string>
    <string name="text_status_tanker">Status Tanker</string>
    <string name="hint_no_bill_of_lading">No Bill Of Lading</string>
    <string name="hint_voyage_tanker">Voyage Tanker</string>
    <string name="text_input_periode">Input Periode</string>
    <string name="text_periode">Periode</string>
    <string name="hint_call_tanker">Call Tanker</string>
    <string name="text_solar">Solar</string>
    <string name="radio_loading_port">Loading Port</string>
    <string name="radio_discharge_port">Discharge Port</string>
    <string name="hint_hour">jam</string>
    <string name="text_titik_dua">:</string>
    <string name="hint_minute">menit</string>
    <string name="text_pilot">Pilot</string>
    <string name="text_laboratorium_analysis">Laboratorium Analysis</string>
    <string name="text_tug_boat">Tug Boat</string>
    <string name="text_jetty">Jetty</string>
    <string name="text_daylight">Daylight</string>
    <string name="text_tide">Tide</string>
    <string name="text_ballasting_deballasting">Ballasting / Deballasting</string>
    <string name="text_tank_cleaning">Tank Cleaning</string>
    <string name="text_nomination">Nomination</string>
    <string name="text_man_power">Man Power</string>
    <string name="text_bad_weather">Bad Weather</string>
    <string name="text_line">Line</string>
    <string name="text_cargo">Cargo</string>
    <string name="text_ullage">Ullage</string>
    <string name="text_supply_bunker">Supply Bunker</string>
    <string name="text_supply_fresh_water">Supply Fresh Water</string>
    <string name="text_act_load_date_act_disch_date">Act Load Date Act Disch Date</string>
    <string name="text_preparation">Preparation</string>
    <string name="text_shore_order">Shore Order</string>
    <string name="text_ship_s_clearence">Ship\'s Clearence</string>
    <string name="text_cargo_document">Cargo Document</string>
    <string name="text_slow_pump_vessel">Slow Pump Vessel</string>
    <string name="text_slow_pump_shore">Slow Pump Shore</string>
    <string name="text_cargo_calculation">Cargo Calculation</string>
    <string name="text_steaming_in_out">Steaming IN / OUT</string>
    <string name="text_ship_s_unready">Ship\'s Unready</string>
    <string name="hint_master">Master</string>
    <string name="hint_est_hire_rate_usd_day">Est. Hire Rate (USD/Day)</string>
    <string name="hint_type_based_activity">Type (Based Activity)</string>
    <string name="hint_type_based_call">Type (Based Call)</string>
    <string name="hint_loa">LOA</string>
    <string name="hint_grt">GRT</string>
    <string name="hint_dwt">DWT</string>
    <string name="hint_flag">Flag</string>
    <string name="date_of_bill_of_lading_tanker">Date of Bill of Lading Tanker</string>
    <string name="all_fast">All Fast</string>
    <string name="channel_connection">Channel Connection</string>
    <string name="dry_certificate_issued">Dry Certificate Issued</string>
    <string name="completed_cargo_calculation">Completed Cargo Calculation</string>
    <string name="lab_test_released_before_disch">Lab Test Released (Before Disch)</string>
    <string name="commence_discharge_loading">Commence Discharge / Loading</string>
    <string name="completed_loading_discharge">Completed Loading / Discharge</string>
    <string name="completed_hose_disconnect">Completed Hose Disconnect</string>
    <string name="lab_test_released_after_load">Lab Test Released (After Load)</string>
</resources>