<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pertamina.pertaminatuban.marine.input.InputInitialTankerActivity"
    tools:showIn="@layout/activity_input_initial_tanker">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_call_tanker">
            <EditText
                android:id="@+id/input_initial_tanker_call_tanker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_periode"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <Button
            android:id="@+id/input_initial_tanker_periode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_input_periode"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_voyage_tanker">
            <EditText
                android:id="@+id/input_initial_tanker_voyage_tanker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_no_bill_of_lading">
            <EditText
                android:id="@+id/input_initial_tanker_no_bill_of_landing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_status_tanker"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_status_tanker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_status_tanker_own"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_own_tanker"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_status_tanker_charter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_charter_tanker"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_status_operasional_report"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_status_operasional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_status_operasional_own"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_own_tanker"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_status_operasional_charter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_charter_tanker"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_grades"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_grades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_grades_pertamax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_pertamax"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_grades_premium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_premium"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_grades_solar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_solar"
                android:layout_weight="1"/>
        </RadioGroup>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_handling_agent">
            <EditText
                android:id="@+id/input_initial_tanker_handling_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_general_agent">
            <EditText
                android:id="@+id/input_initial_tanker_general_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cargo_status">
            <EditText
                android:id="@+id/input_initial_tanker_cargo_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tanker_activity"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_tanker_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_tanker_activity_discharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_discharge"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_tanker_activity_loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_loading"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pumping_method"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_pumpung_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_pumping_method_grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_grade_by_grade"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_pumping_method_simultan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_simultan"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_barthing_at_spm"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_barthing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_barthing_spm35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_spm_35"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_barthing_spm150"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_spm_150"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_barthing_tppi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_jetty_tppi_2"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_barthing_tppi3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_jetty_tppi_3"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_port_of_call"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_port_of_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_port_of_call_loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_loading_port"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_port_of_call_discharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_discharge_port"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_port_of_call_report"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_port_of_call_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_port_of_call_report_loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_loading_port"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_port_of_call_report_discharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_discharge_port"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_last_port"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_last_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_last_port_loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_loading_port"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_last_port_discharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_discharge_port"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_next_port"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/input_initial_tanker_group_next_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_next_port_loading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_loading_port"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/input_initial_tanker_radio_next_port_discharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_discharge_port"
                android:layout_weight="1"/>
        </RadioGroup>
        <Button
            android:id="@+id/input_initial_tanker_kirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/button_text_kirim"/>
    </LinearLayout>
</ScrollView>
